<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 Adrian Hall

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/authenticator_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/authenticator_title"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authenticator_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_panel"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/authenticator_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username_black_24dp"
                    android:drawableTint="@color/colorAccent"
                    android:singleLine="true"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/authenticator_password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/authenticator_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableStart="@drawable/ic_password_black_24dp"
                    android:drawableTint="@color/colorAccent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/authenticator_sign_in_button"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/authenticator_forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/button_link"
                android:background="@android:color/transparent"
                android:text="@string/forgot_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <Button
                android:id="@+id/authenticator_sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/validated_button"
                android:enabled="false"
                android:text="@string/action_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/authenticator_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/button_link"
                android:background="@android:color/transparent"
                android:text="@string/authenticator_sign_up_msg"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/authenticator_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_profile_image_background"
        android:contentDescription="@string/profile_icon_contentDescription"
        android:elevation="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_icon" />

    <ImageButton
        android:id="@+id/authenticator_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/authenticator_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_contentDescription"
        app:srcCompat="@drawable/ic_cancel_white_24dp" />
</RelativeLayout>